# lstm_transf_to_state

./: .gitignore  Ensemble prediction.ipynb  README.md  Upload_prediction.ipynb  apply_23_to_predict_24.ipynb  apply_model.py  apply_model_climate.py  apply_model_region.py  apply_sum_regions.py  apply_the_model_in_a_specific_region.ipynb  baseline model.ipynb  baseline_model.ipynb  baseline_model_clima.ipynb  best_models_by_state.ipynb  comp_predictions.ipynb  custom_loss_model.ipynb  environment.yml  gen_prediction_by_regions_and_state.ipynb  make_the_predictions.ipynb  models.py  preprocess_data.py  proposed_models.ipynb  pyproject.toml  register model.ipynb  revised_model_region.ipynb  revised_model_region_in_2023.ipynb  sprint_model_global_regional.ipynb  test_grocking_AM.ipynb  test_grocking_CE.ipynb  test_grocking_GO.ipynb  test_grocking_MG.ipynb  test_grocking_PR.ipynb  testing_the_use_of_the_stateful_model.ipynb  train_model.py  train_model_2023.py  train_model_climate.py  train_model_region.py  train_model_sum_region.py  training_model_separated_by_region.ipynb
data/: agg_episcanner_pars_by_macroregion.ipynb  download_episcanner_parameters.ipynb  pop_regional.csv
predictions/: preds_AM_2023_comb_att.csv  preds_AM_2024_comb_att.csv  preds_CE_2023_baseline.csv  preds_CE_2023_baseline_msle.csv  preds_CE_2024_baseline.csv  preds_CE_2024_baseline_msle.csv  preds_GO_2023_att.csv  preds_GO_2023_att_msle.csv  preds_GO_2024_att.csv  preds_GO_2024_att_msle.csv  preds_MG_2023.csv  preds_MG_2023_baseline.csv  preds_MG_2023_bi_lstm.csv  preds_MG_2023_cl.csv  (+11 more)
(+15 files in other folders)
