[tool.poetry]
name = "lstm-transf-to-state"
version = "0.1.0"
description = ""
authors = ["Eduardo Correa Araujo <65051489+eduardocorrearaujo@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13" 
geopandas = "^1.0.1"
pandas = "^2.2.2"
jupyter = "^1.0.0"
altair = "^5.3.0"
matplotlib = "^3.9.1"
statsmodels = "^0.14.2"
tensorflow = "2.16.1"
mosqlient = "^1.3.2"
epiweeks = "^2.3.0"
keras-multi-head = "^0.29.0"
keras-self-attention = "^0.51.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
